# Minerva

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  SECURITY.md  api.html  contributing.html  design.html  environment.yaml  experiments.html  genindex.html  getting_started.html  how_to.html  index.html  installation.html  modules.html  new setr net graph.txt  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setr net graph.txt  setr_test.py  test_setr.py  teste.ipynb  tutorials.html
.devcontainer/: Dockerfile  Dockerfile.conda  README.md  devcontainer.json  post_start.sh  post_start_conda.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: api_change.md  bug_report.md  feature_request.md  fix_request.md
.github/PULL_REQUEST_TEMPLATE/: feature_template.md
.github/workflows/: auto-format.yml  continuous-testing.yml  docs.yaml  format-check.yaml  python-app.yml  release_to_pypi.yml  release_to_pypi_minerva-ml.yml
_modules/: index.html
_modules/minerva/analysis/: model_analysis.html
_modules/minerva/callback/: embedding_logger_callback.html
_modules/minerva/data/: data_module_tools.html
_modules/minerva/engines/: engine.html  patch_inferencer_engine.html
_modules/minerva/losses/: _functional.html  batchwise_barlowtwins_loss.html  dice.html  negative_cossine_similatiry.html  ntxent_loss_poly.html  topological_loss.html  xtent_loss.html
_modules/minerva/models/: adapters.html  finetune_adapters.html  loaders.html
_modules/minerva/optimizers/: lars.html
_modules/minerva/pipelines/: base.html  experiment.html  (+1 more)
_sources/: api.rst.txt  experiments.md.txt  getting_started.md.txt  getting_started.rst.txt  index.rst.txt  installation.md.txt  installation.rst.txt  tutorials.rst.txt
_sources/notebooks/: 2.models.ipynb.txt
autoapi/minerva/: index.html
configs/callbacks/: default_train.yaml
configs/data/: f3_reconstruct_data.yaml  random_reconstruction_data.yaml
configs/loggers/: default.yaml
configs/models/: single_channel_unet.yaml
configs/trainer/: default.yaml
docker/: dockerfile
docs/: api.rst  build.sh  conf.py  contributing.md  contributing.rst  design.md  experiments.rst  getting_started.md  how_to.md  index.rst  installation.md  installation.rst  modules.rst  ssl_tools.analysis.rst  tutorials.rst
docs/notebooks/: 1.datasets.ipynb  3.pipelines.ipynb  4.minerva_setr_pup_pipeline.ipynb  5.sam_pipeline.ipynb  experiment_api_example.ipynb  har_getting_started.ipynb  seismic_facies_getting_started.ipynb
minerva/: __init__.py
minerva/analysis/: clustering_analysis.py  complexity_performance_analysis.py  model_analysis.py
minerva/callback/: embedding_logger_callback.py  specific_checkpoint_callback.py
minerva/callbacks/: HyperSearchCallbacks.py
minerva/cli/: experiment.py
minerva/data/: README.md  data_module_tools.py
minerva/engines/: engine.py  patch_inferencer_engine.py  prompt_inferencer_engine.py  slidingwindow_inferencer_engine.py
minerva/losses/: _functional.py  _topological_signature_distance.py  _topology.py  batchwise_barlowtwins_loss.py  dice.py  negative_cossine_similatiry.py  ntxent_loss_poly.py  ntxentloss_poly.py  topo_loss.py  topological_loss.py  weighted_dice_loss.py  xtent_loss.py
minerva/models/: README.md  adapters.py  finetune_adapters.py  loaders.py
minerva/optimizers/: __init__.py  lars.py  lr_schedulers.py
minerva/pipelines/: README.md  __init__.py  base.py  experiment.py  hyperopt_hyperparameter_search.py  hyperparameter_search.py  lightning_pipeline.py  ray_hyperparameter_search.py
minerva/samplers/: domain_sampler.py
minerva/schedulers/: warmup_cosine_annealing.py
minerva/transforms/: __init__.py  activity_image.py  byol.py  context_transform.py  moco_augmentations.py  random_transform.py  split_transform.py  tfc.py  transform.py
minerva/utils/: adapters.py  cossine_scheduler.py  data.py  deactivate_grad.py  deprecated.py  instantiators.py  model.py  output.py  patches.py  position_embedding.py  string_ops.py  tensor.py  typing.py  upsample.py
notebooks/: 1.datasets.html  2.models.html  3.pipelines.html  4.minerva_setr_pup_pipeline.html  experiment_api_example.html  experiment_api_example.ipynb  getting_started.html  getting_started.ipynb  har_getting_started.html  har_getting_started.ipynb  seismic_facies_getting_started.html
sslt/callbacks/: performance.py  save_best.py
sslt/losses/: _functional.py  dice.py
sslt/pipelines/: base.py  cli.py  main_regression.py  mlflow_train.py  utils.py
sslt/transforms/: Transform.py  __init__.py  transform.py
tests/: test_imports.py
tests/analysis/: test_clustering_analysis.py  test_tsne_analysis.py
tests/callback/: test_specific_checkpoint_callback.py
tests/engines/: test_patch_inferencer_engine.py  test_patche_inference_engine.py  test_prompt_inferencer_engine.py  test_slidingwindow_inferencer_engine.py
tests/losses/: test_batchwise_barlowtwins_loss.py  test_ntxent_loss.py  test_ntxent_poly_loss.py  test_topological_loss.py  test_weighted_dice_loss.py
tests/models/: conftest.py  test_adapters.py  test_layer_getter.py  test_loaders.py
tests/optimizers/: test_lr_schedulers.py
tests/pipelines/: test_experiment.py  test_lightning_pipeline.py
tests/samplers/: domain_sampler.py
tests/transforms/: test_activity_image.py  test_byol_transforms.py  test_random_flip.py  test_random_transforms.py  test_split_transform.py  test_tfc_transform.py  test_transform.py
tests/utils/: test_deprecated.py  test_instantiators.py
(+560 files in other folders)
