[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0"]

[project]
authors = [
    { name = "Gabriel Gutierrez", email = "gabriel.bgs00@gmail.com" },
    { name = "Otavio Napoli", email = "onapoli@lmcad.ic.unicamp.br" },
    { name = "Fernando Gubitoso Marques", email = "fernandogubitosom@gmail.com" },
    { name = "Edson Borin", email = "borin@unicamp.br " },

]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = "the framework for traning machine learning models for reaserchers."
keywords = [
    "Machine Learning",
    "self supervised learning",
    "Reaserch",
    "Deep Learning",
    "Computer Vision",
    "Pytorch",
    "SSL",
]
license = { file = "LICENSE" }
name = "minerva"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0-dev"


dependencies = [
    "lightning",
    "numpy",
    "pandas",
    "plotly",
    "PyYAML",
    "scipy",
    "statsmodels",
    "tifffile",
    "torch",
    "torchvision",
    "timm",
    "zarr",
    "torchmetrics",
    "rich",
    "perlin-noise",
    "gitpython"
    "jsonargparse",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = ["mock", "pytest", "black", "isort"]

[project.urls]
"Bug Tracker" = "https://github.com/discovery-unicamp/Minerva/issues"
"Homepage" = "https://github.com/discovery-unicamp/Minerva"
