[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0"]

[project]
authors = [
    { name = "Gabriel Gutierrez", email = "gabriel.bgs00@gmail.com" },
    { name = "Otavio Napoli", email = "onapoli@lmcad.ic.unicamp.br" },
    { name = "Fernando Gubitoso Marques", email = "fernandogubitosom@gmail.com" },
    { name = "Edson Borin", email = "borin@unicamp.br" },

]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = "A framework for traning machine learning models for reaserchers."
keywords = [
    "Deep Learning",
    "Machine Learning",
    "Pytorch",
    "Reaserch",
    "Self Supervised Learning",
    "SSL",
]
license = { file = "LICENSE" }
name = "minerva"
readme = "README.md"
requires-python = ">=3.8"
version = "0.2.2-beta"

dependencies = [
    "gitpython>=3",
    "jsonargparse>=4.27",
    "lightning>=2.1.9",
    "scikit-learn>=1.2.0",
    "numpy>=1.23.5",
    "pandas>=2.2.2",
    "perlin-noise>=1.12",
    "plotly>=5.18",
    "PyYAML>=6.0",
    "rich>=13.0",
    "scipy>=1.10",
    "statsmodels>=0.13",
    "tifffile>=2024",
    "timm>=1.0.2",
    "torch>=2.0.8",
    "torchmetrics>=1.3.0",
    "torchvision>=0.15",
    "wrapt>=1.16",
    "zarr>=2.17"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["minerva*"]

[project.optional-dependencies]
dev = ["mock", "pytest", "black", "isort"]
docs = [
    "Ipython",
    "nbsphinx",
    "pandoc",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-argparse",
    "sphinx-autoapi"
]

[project.urls]
"Bug Tracker" = "https://github.com/discovery-unicamp/Minerva/issues"
"Homepage" = "https://github.com/discovery-unicamp/Minerva"
